--- a/c3_index.html
+++ b/c3_index.html
@@ -20,7 +20,7 @@
 
 		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:</p>
 
-		<blockquote>Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.</blockquote>
+		<blockquote>"Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless."</blockquote>
 
 		<h2>Our Ticket Packages</h2>
 
@@ -32,7 +32,8 @@
 
 		<h1>This season's guest speakers</h1>
 
-		<h3>October<br>David Brancaccio</h3>
+		<h3>October<br><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
+		<img src="images/brancaccio75.jpg" alt="Brancaccio  Picture">
 
 	</main>
 
